--- a/env.properties.example
+++ b/env.properties.example
@@ -1,3 +1,5 @@
 DATABASE_URL=jdbc:mysql://localhost:3306/edutrack
 DATABASE_USER=root
 DATABASE_PASSWORD=root
+
+JWT_SECRET_KEY=your-very-secure-secret-key-here
